# nexus-helpdesk

./: .env.example  .gitignore  .prettierrc.json  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: launch.json
.github/workflows/: ci.yml
.sqlx/: query-0078010707d953d638825711cbf571705a4e2d8a3de3650efc3cef885f6c8598.json  query-04490efc041d98b6d121867f38771e97e2f2221e39dc72076db39892f01e792e.json  query-05c954fa5e97ea1002bd7e16e8c9608dc95b8ee8b780b5e976ef517a84c8cc7e.json  query-0fa8f0ed6caf6d28901af8c1c10bfb8377da27b8e9e3eca4bf4ff61e4112722b.json  query-1e4a945dca9fecc1d503e5c39faf8da138ec934f1f7573b970f097cbea1f0268.json  query-2cd8899f9c3e46d51a72168b0268df78c280a0983eb6c8a386bbac3a1e32e4f4.json  query-2f0664dde6465f5399ff6ad813344a7323f4c46624654825a1af582a5c39c21e.json  query-319a433b7775b50733165484a83b62db7ea6ddd90faffdfb96b0af43388b53e3.json  query-3b241378214a748c018c445e7a40f15bab8c9b01cfb6d33d688e74de3b8193fb.json  query-5a1a57e84a6cae757847b3fc7e70db66ad8381717cb34176263b368e0426438c.json  query-6a37fdccfa52c1cfc2e9cb449742aaf8fbfb505b9ad77103dbd4e243616136d2.json  query-77340bc68227ba44c83be350f9076eeeb4347f516a20e1304ffaf7b52024c29a.json  query-7a9ff53683ebfe990360f7a84240debd9d32e198a47a0f0a45f95ee193989819.json  query-7e3859fcbc86a7fc1e3caff404795b72606f19466ddf9e37d6f4069b3858f80f.json  query-7e957bcb35129a1be234a85a53bd0b55a2cbe489449f153955b9657f1b2167e3.json  query-9188fee8efc0c04fe2565a96455ee4bfde24b652337a07f73e0952cf2e9e6bbc.json  query-94823177074bd36ebaeeac44f483a7b0557c7ac52eeb2bb6b11dfdb1586ba3ab.json  query-9f02e848529213fc02dc7a90ba338c1fc4e4918355027c0e7bea1794cfb2d827.json  query-a8c6a3b5d714378b2aa99b7e1bdf72e76b77ba1705fc0279bf9b720bad78f898.json  query-ac546e647e8caf44ff1a4ad7ec39e560787c76300fadb3be696eadec4fa872d3.json  query-af8b9f5dcd0bc51f3053e3cdbb3bb49daef455ccf77abae4ef5bd50dbee18227.json  query-b368be4d5c118b5e8746f6dc9842afba0b3dad61623a167d06bfcbfde5a902ce.json  query-b7a4bdf3941107d503402bc601ea83da12ac1c5e636cd05a0dbf6982341c9f52.json  query-bd327ceb64514380a9e134e1da767fcb8a3ff4982ec6eac978cb4ba5ba9075d4.json  query-bdb90da2c9a038b2ef465e7f78eb25b2b63f8f4a9113c8b501969aa190558953.json  query-c3113860d0428b6b2964c3f79a9a6ebac763cb5b7a5c43d75c25671aa04a7dff.json  query-caa350f486f80530e96b8fac6be1617c8372721cdc02309eebd9033a7031fbf9.json  query-e85c13f4d7a475038e7ec396b054fae8a8c76e24c2496f4812cc817e8a445870.json  query-ef2bb69bacace57e64058dfb7bb3aae02936339f4473326a08ca5e26d961da54.json  query-fe5352b2357d7b06376bdb37435a5290107ef2665de251b47db8f2fd152b9b02.json
apps/admin/: package.json  vite.config.ts
apps/onboarding/: .env.example  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
crates/ai_engine/: Cargo.toml
crates/ai_engine/src/: embedding.rs  error.rs  lib.rs  vector_store.rs
crates/api_gateway/: Cargo.toml
crates/api_gateway/src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs  response.rs
crates/api_gateway/src/middleware/: auth.rs  rate_limit.rs
crates/api_gateway/src/realtime/: mod.rs
crates/api_gateway/src/routes/: mod.rs
crates/api_gateway/src/routes/identity/: contracts.rs  handlers.rs  mod.rs
crates/api_gateway/src/routes/knowledge/: contracts.rs  handlers.rs  mod.rs
crates/api_gateway/src/routes/realtime/: mod.rs
crates/api_gateway/src/routes/ticketing/: contracts.rs  handlers.rs  mod.rs
crates/api_gateway/src/utils/: cookies.rs  jwt.rs  mod.rs  secret.rs
crates/api_gateway/tests/: admin_api_test.rs  auth_api_test.rs  identity_users_test.rs  ticketing_api_test.rs
crates/api_gateway/tests/common/: mod.rs
crates/domain_identity/: Cargo.toml
crates/domain_identity/src/application/use_cases/: authenticate_api_key.rs  change_user_role.rs  check_slug_availability.rs  create_api_key.rs  get_tenant.rs  get_tenant_by_slug.rs  invite_user.rs  issue_refresh_token.rs  list_api_keys.rs  list_users.rs  login.rs  logout.rs  mod.rs  refresh_session.rs  register_tenant.rs  reset_password.rs  revoke_api_key.rs  self_register_customer.rs  update_tenant.rs  update_user_status.rs
crates/domain_identity/src/domain/: error.rs
crates/domain_identity/src/domain/entities/: api_key.rs  credential.rs  mod.rs  refresh_token.rs  role.rs  tenant.rs  user.rs
crates/domain_identity/src/domain/ports/: mod.rs  repositories.rs  security.rs  uow.rs
crates/domain_identity/src/infrastructure/: mod.rs
crates/domain_identity/src/infrastructure/database/: database_connection.rs  mod.rs  postgres_api_key_repo.rs  postgres_credential_repo.rs  postgres_refresh_token_repo.rs  postgres_tenant_repo.rs  postgres_uow.rs  postgres_user_repo.rs
crates/domain_identity/src/infrastructure/security/: argon2_hasher.rs  mod.rs
crates/domain_identity/tests/: login_test.rs  register_tenant_test.rs  reset_password_test.rs
crates/domain_identity/tests/common/: mod.rs
crates/domain_ticketing/: Cargo.toml
crates/domain_ticketing/src/application/: mod.rs
crates/domain_ticketing/src/application/use_cases/: add_message.rs  assign_ticket.rs  create_ticket.rs  get_ticket.rs  list_ticket_messages.rs  list_tickets.rs  mod.rs  update_ticket_status.rs
crates/domain_ticketing/src/application/workers/: ai_worker.rs  mod.rs
crates/domain_ticketing/src/domain/: error.rs  mod.rs
crates/domain_ticketing/src/domain/entities/: message.rs  mod.rs  ticket.rs
crates/domain_ticketing/src/domain/ports/: mod.rs  repositories.rs  uow.rs
crates/domain_ticketing/src/infrastructure/database/: mod.rs  postgres_message_repo.rs  postgres_ticket_repo.rs  postgres_uow.rs
crates/domain_ticketing/tests/: ai_worker_test.rs  create_ticket_test.rs
crates/domain_ticketing/tests/common/: mod.rs
dev/: Caddyfile  README.md  dnsmasq-setup.md
docker/: create-test-database.sql
migrations/: 20260509015849_init_identity_schema.sql  20260517171129_init_ticketing_schema.sql  20260522180000_refresh_tokens_and_api_keys.sql  20260524135934_description_tenant.sql  20260524200000_tenant_theme.sql  20260530120000_ticket_priority_category_assignee.sql
(+140 files in other folders)
