[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# Axum & Web
axum = "0.8.9"
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["cors", "trace"] }

# Observabilidade & Utilitários
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenvy = "0.15.7"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }

uuid = { version = "1.23.1", features = ["v4", "serde"] }
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "uuid",
  "runtime-tokio",
  "time",
] }

time = { version = "0.3.47", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }

thiserror = "2.0.18"
reqwest = "0.13.3"
