[package]
name = "ai_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest    = { workspace = true, features = ["json"] }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }

qdrant-client = "1.18.0"