[package]
name = "api_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dependências do Workspace
uuid = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }

validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
    "rust_crypto",
] }
chrono = "0.4.44"

# 📚 Swagger / OpenAPI
utoipa = { version = "5.5.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Dependências Locais (Outros Crates)
domain_identity = { path = "../domain_identity" }
domain_ticketing = { path = "../domain_ticketing" }
