[package]
name = "api_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dependências do Workspace
uuid = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }

time = { workspace = true }
config = "0.15.23"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = [
    "rust_crypto",
] }
chrono = "0.4.44"
sha2 = "0.11.0"
base64 = "0.22.1"
rand = "0.10.1"
hex = "0.4.3"
tower_governor = { version = "0.8.0", default-features = false, features = ["axum"] }
governor = "0.10.4"

# 📚 Swagger / OpenAPI
utoipa = { version = "5.5.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Dependências Locais (Outros Crates)
domain_identity = { path = "../domain_identity" }
domain_ticketing = { path = "../domain_ticketing" }
ai_engine = { path = "../ai_engine" }
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
http-body-util = "0.1"
tower = { version = "0.5.3", features = ["util"] }
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
