[package]
name = "domain_identity"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }

uuid = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }

thiserror = { workspace = true }
time = { workspace = true }

tokio = { workspace = true }

argon2 = "0.5.3"
