[package]
name = "domain_identity"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }

uuid = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }

thiserror = { workspace = true }
time = { workspace = true }

tokio = { workspace = true }

argon2 = "0.5.3"

[dev-dependencies]
fake = { version = "5.1.0", features = ["derive"] }
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ['postgres'] }
pretty_assertions = "1.4.1"
